css/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
/* font-family: 'Montserrat', sans-serif; */

:root {
	--primary: #17408b;
	--secondary: #c9082a;
	--background: #202020;
	--background-var: #393939;
	--white: #ffffff;
	--black: #000;
	--gradient-horizontal: linear-gradient(
		90deg,
		rgba(23, 64, 139, 1) 0%,
		rgba(201, 8, 42, 1) 100%
	);
	--gradient-vertical: linear-gradient(
		180deg,
		rgba(23, 64, 139, 1) 0%,
		rgba(201, 8, 42, 1) 100%
	);
}

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: "Montserrat", sans-serif;
	background-color: var(--background);
}

p {
	margin: 0;
}

a:hover {
	color: currentColor;
	text-decoration: none;
}

/* Header */

header {
	position: sticky; /* Buat header tetap di atas */
	top: 0;
	z-index: 999;
}

.nav__upper {
	background: rgb(23, 64, 139);
	background: var(--gradient-horizontal);
	height: 3rem;
	display: grid;
	grid-template-columns: 1fr auto minmax(400px, 12fr) 1fr;
}

.logo {
	text-decoration: none;
	color: var(--white) !important;
	font-weight: 700;
	font-size: 1.5rem;
	grid-column: 2 / span 1;
	align-self: center;
}

.nav__upperlink {
	grid-column: 3 / span 1;
	display: flex;
	justify-content: flex-end;
	align-items: center;
	list-style-type: none;
	margin-bottom: 0 !important;
}

.nav__upperlink li {
	margin-left: 3em;
}

.nav__upperlink li a {
	color: var(--white);
	font-weight: 700;
	font-size: 1rem;
	text-decoration: none;
	text-transform: uppercase;
	position: relative;
}

.nav__upperlink li a::after {
	content: "";
	position: absolute;
	left: 0;
	bottom: -0.125em;
	background-color: var(--white);
	border-radius: 12px;
	height: 0.125em;
	width: 100%;
	transform: scaleX(0);
	transform-origin: left;
	transition: transform 300ms ease-in-out;
}

.nav__upperlink li a:hover::after {
	transform: scaleX(1);
}

.nav__lower {
	display: flex;
	justify-content: center;
}

.nav__lowerlink {
	background-color: var(--background-var);
	list-style-type: none;
	display: flex;
	justify-content: center;
	gap: 8em;
	width: 100%;
	padding-block: 0.25em;
}

.nav__lowerlink li a {
	color: rgb(255, 255, 255, 0.7);
	font-weight: 600;
	font-size: 1rem;
	text-decoration: none;
	text-transform: uppercase;
	position: relative;
	transition: color 200ms ease-in-out;
}

.nav__lowerlink li a:hover {
	color: var(--white);
}

.nav__lowerlink li a::after {
	content: "";
	position: absolute;
	left: 0;
	bottom: -0.25em;
	background-color: var(--secondary);
	border-radius: 12px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	height: 0.25em;
	width: 100%;
	transform: scaleY(0);
	transform-origin: bottom;
	transition: transform 300ms ease-in-out;
}

.nav__lowerlink li a:hover::after {
	transform: scaleY(1);
}

/* Login & Register */

.login-container {
	background: var(--gradient-horizontal);
	display: flex;
	justify-content: center;
	max-width: 40%;
	margin-inline: auto;
	margin-block: 1em;
	padding-block: 2em;
	padding-inline: 2em;
	border-radius: 1rem;
}

.login-form {
	min-width: 100%;
}

.element-form {
	display: flex;
	flex-direction: column;
	margin-bottom: 2rem;
}

.element-form label {
	color: var(--white);
	font-size: 1rem;
	font-weight: 500;
	margin-bottom: 0.25em;
}

.element-form span {
	display: block;
}

.element-form span input[type="text"],
.element-form span input[type="password"],
.element-form span textarea,
.element-form span select {
	width: 100%;
	padding: 0.25em;
	box-sizing: border-box;
	border-radius: 0.5em;
}

.element-form span input[type="submit"] {
	background: var(--primary);
	border: none;
	color: var(--white);
	padding: 7px 20px;
	border-radius: 0.5em;
	font-size: 0.75rem;
	cursor: pointer;
}

.element-form span input[type="submit"]:hover {
	background: var(--secondary);
}

.element-form span input[type="radio"] {
	color: var(--white);
	background-color: #17408b;
}

.tombol-action {
	cursor: pointer;
	position: relative;
	background: var(--background);
	padding: 0.5rem 1rem;
	width: 100%;
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 0.25em solid var(--white);
	border-radius: 0.5em;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	color: white;
	font-size: 0.875rem;
	font-weight: 700;
	font-family: "Montserrat", sans-serif;
	text-decoration: none;
	transition: border 300ms ease-in-out;
}

.tombol-action::after {
	content: "";
	position: absolute;
	left: 0;
	bottom: 0;
	background-color: var(--secondary);
	border-radius: 12px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	height: 0.25em;
	width: 100%;
	transform: scaleX(0);
	transform-origin: center;
	transition: transform 300ms ease-in-out;
}

.tombol-action:hover::after {
	transform: scaleX(1);
}

.register-link {
	color: var(--white);
	font-size: 0.875rem;
	margin-top: 0.25em;
}

.register-link a {
	color: #ddd;
}

/* My Profile */

.bg-page-profile {
	display: grid;
	grid-template-columns: 1fr 6fr;
}

.menu-profile {
	float: left;
	min-width: 25%;
	height: 100vh;
	background: var(--background);
	border-right: 1px solid var(--background-var);
}

.menu-profile ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

.menu-profile li {
	border-bottom: 1px solid var(--background-var);
}

.menu-profile a {
	position: relative;
	display: block;
	color: white;
	text-decoration: none;
	padding: 0.75em 1.5em;
}

.menu-profile a::before {
	content: "";
	position: absolute;
	background-color: var(--secondary);
	width: 0.25em;
	height: 100%;
	top: 0;
	left: 0;
	border-top-right-radius: 1rem;
	border-bottom-right-radius: 1rem;
	transform: scaleX(0);
	transform-origin: left;
	transition: transform 350ms ease-in-out;
}

.menu-profile a:hover::before,
.menu-profile a.active::before {
	transform: scaleX(1);
}

#frame-tambah {
	margin-block: 1em;
	text-align: right;
}

.table-list {
	width: 100%;
	border-collapse: collapse;
}

.table-list tr {
	border-bottom: 1px solid #1e5474;
	background: var(--gradient-horizontal);
}

.table-list tr.baris-title {
	background: #e6e6e6;
}

.table-list tr th,
.table-list tr td {
	padding: 0.75em 1em;
}

.table-list tr td {
	color: var(--white);
}

.kolom-nomor {
	width: 20px;
	text-align: center;
}

.tengah {
	text-align: center;
}

.kiri {
	text-align: left;
}

.kanan {
	text-align: right;
}

/* Main Page */

.cari-form {
	background: var(--gradient-horizontal);
	border-radius: 0.5rem;
	width: 50%;
	height: 2em;
	margin-inline: auto;
	margin-block: 0.5em;
	padding-block: 0.25em;
	padding-inline: 0.5em;
	display: flex;
}

.cari-text {
	background: transparent;
	color: var(--white);
	border: none;
	width: 100%;
}

.cari-text::placeholder {
	color: var(--white);
}

.cari-btn {
	background: none;
	border: none;
	height: 90%;
}

.game-list {
	list-style-type: none;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 1em;
	margin-block: 1em;
	margin-inline: 1em;
}

.price {
	color: var(--white);
	margin-bottom: 0.25em;
}

.game-item {
	display: flex;
	flex-direction: column;
	align-items: center;
	/* background: var(--gradient-vertical); */
	border-radius: 0.5rem;
}

.game-img__container {
	position: relative;
	max-width: 20em;
	max-height: 20em;
}

.game-img__image {
	width: 100%;
	border-radius: 1rem;
	background: var(--gradient-vertical);
	background-clip: padding-box;
	padding: 5px;
}

.game-img__text {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding-block: auto;
	position: absolute;
	inset: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(32, 32, 32, 0.7);
	border-radius: 1rem;
	visibility: hidden;
	opacity: 0;
	transition: all 300ms ease-in-out;
}

.game-img__text p {
	color: var(--white);
	font-weight: 700;
	font-size: 1rem;
	text-align: center;
	margin-bottom: 0.25em;
	padding-inline: 1em;
}

.game-img__container:hover a .game-img__text {
	visibility: visible;
	opacity: 1;
}

.keterangan-gambar a {
	text-decoration: none;
	color: var(--white);
}

.keterangan-gambar span {
	color: var(--white);
	text-align: center;
}

/* Detail */

.container-detail {
	margin-inline: 5em;
	color: var(--white);
}

.frame-gambar img {
	width: 100%;
	border-radius: 1rem;
	background: var(--gradient-vertical);
	background-clip: padding-box;
	padding: 5px;
}

.keterangan-game {
	font-size: 1.75rem;
	margin-bottom: 2em;
}

.nama-game {
	margin-top: 0.25em;
}

.nama-game h2 {
	font-size: 2rem;
	font-weight: 700;
}

.harga-game {
	display: grid;
	grid-template-columns: 2fr 0.25fr 1fr;
}

.rincian-game {
	display: grid;
	grid-template-rows: repeat(2, 1fr);
	justify-content: center;
}

.detail-game {
	display: grid;
	grid-template-columns: 2fr 1fr;
	margin-top: 1em;
	padding-bottom: 3rem;
}

.detail-game .kanan {
	grid-column: -2;
	display: flex;
	flex-direction: column;
	text-align: left;
}

.detail-game .kanan h3 {
	font-size: 1.5rem;
	font-weight: 700;
}

.detail-game .kanan > * {
	background-color: var(--black);
	border: 1px solid var(--background-var);
	padding-block: 0.5em;
	padding-left: 1em;
}

.detail-game .kanan > * > * {
	padding: auto;
}

.harga-game {
	font-size: 1.5rem;
}

.tombol-beli {
	grid-column: -2;
	flex-wrap: nowrap;
	text-align: center;
}

